--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@sendgrid/mail": "^8.1.4",
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-query": "^5.55.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "csv-parser": "^3.0.0",
     "lodash": "^4.17.21",
